sfSandBoxCode/force-app/main/default/objects/Rootstock_Inventory_Item__c/Rootstock_Inventory_Item__c.object-meta.xml
<CustomObject>
    <description>A copy of rootstock items to be used in SF opportunity</description>
    <label>Rootstock Inventory Item</label>
    <nameField>
        <label>Inventory Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rootstock Inventory Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>