sfSandBoxCode/force-app/main/default/objects/Rootstock_Inventory_Item__c/fields/Company_Id__c.field-meta.xml
<CustomField>
    <fullName>Company_Id__c</fullName>
    <formula>InventoryItem__r.Item_Company__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Id</label>
    <type>Text</type>
</CustomField>