sfSandBoxCode/force-app/main/default/objects/Rootstock_Inventory_Item__c/fields/Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Item Master</label>
    <referenceTo>rstk__icitem__c</referenceTo>
    <relationshipLabel>Opportunity Inventory ItemsRootstock</relationshipLabel>
    <relationshipName>Opportunity_Inventory_ItemsRootstock</relationshipName>
    <type>Lookup</type>
</CustomField>