sfSandBoxCode/force-app/main/default/objects/Rootstock_Inventory_Item__c/fields/Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Item_Number__c</fullName>
    <formula>Inventory_Item__r.rstk__icitem_item__r.rstk__peitem_item__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Number</label>
    <type>Text</type>
</CustomField>